syntax = "proto3";

service DataWarehouseService {
  rpc InsertWarehouse (WarehouseData) returns (InsertResponse);
  rpc GetWarehouseById (WarehouseRequest) returns (WarehouseData);
}

message WarehouseData {
  string warehouseID = 1;
  string warehouseName = 2;
  string timestamp = 3;
  string warehouseAddress = 4;
  string warehousePostalCode = 5;
  string warehouseCity = 6;
  string warehouseCountry = 7;

  repeated WarehouseProduct products = 8;
}

message WarehouseProduct {
  string productID = 1;
  string productName = 2;
  string productCategory = 3;
  int32 productQuantity = 4;
  string productUnit = 5;
}

message InsertResponse {
  bool success = 1;
  string message = 2;
}

message WarehouseRequest {
  string warehouseID = 1;
}
